# syntax-example

./: Main.hs  syntax-example.cabal  test.txt
