name:                syntax-example
version:             0.1.0.0
synopsis:            Example application using syntax.
license:             MIT
license-file:        LICENSE
author:              Paweł Nowak
maintainer:          Paweł Nowak <pawel834@gmail.com>
copyright:           Paweł Nowak 2014
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable syntax-example
  main-is:             Main.hs
  build-depends:       base, lens, semi-iso,
                       syntax, syntax-attoparsec, syntax-pretty,
                       attoparsec, pretty, text
  default-language:    Haskell2010