name:                syntax-example
version:             0.3.0.0
synopsis:            Example application using syntax, a library for abstract syntax descriptions.
license:             MIT
license-file:        LICENSE
author:              Paweł Nowak
maintainer:          Paweł Nowak <pawel834@gmail.com>
copyright:           Paweł Nowak 2014
category:            Data
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git@github.com:Pawel834/syntax-example.git

executable syntax-example
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5, lens, semi-iso >= 0.4,
                       syntax >= 0.2, syntax-attoparsec >= 0.2, syntax-pretty >= 0.2,
                       attoparsec, pretty, text, scientific >= 0.3
  default-language:    Haskell2010
